--- a/beakjoon/beakjoon/beakjoon.vcxproj.filters
+++ b/beakjoon/beakjoon/beakjoon.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="11404_플로이드.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1167_트리의지름.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="소스.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
