트리 inorder와 postorder로 preorder 생성

--- a/beakjoon/beakjoon/beakjoon.vcxproj
+++ b/beakjoon/beakjoon/beakjoon.vcxproj
@@ -145,7 +145,10 @@
     <ClCompile Include="1167_트리의지름.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="1918_후위 표기식.cpp" />
+    <ClCompile Include="1918_후위 표기식.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="2263_트리의순회.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
