--- a/beakjoon/beakjoon/beakjoon.vcxproj
+++ b/beakjoon/beakjoon/beakjoon.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="11404_플로이드.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="11444_피보나치수6.cpp" />
     <ClCompile Include="1167_트리의지름.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
