fibonacci 행렬의 거듭제곱

--- a/beakjoon/beakjoon/beakjoon.vcxproj
+++ b/beakjoon/beakjoon/beakjoon.vcxproj
@@ -149,7 +149,9 @@
     <ClCompile Include="1918_후위 표기식.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="2263_트리의순회.cpp" />
+    <ClCompile Include="2263_트리의순회.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
